[tool.poetry]
name = "smart-currency-converter"
version = "0.1.0"
description = ""
authors = ["NatalicioNascimento22 <francisco.nascimento@cakeerp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
requests = "^2.31.0"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
